# audio-recorder-manager

./: .gitignore  CLAUDE.md  COMPRESSED_RECORDING_RESEARCH.md  Cargo.toml  IMPLEMENTATION_PLAN.md  NATIVE_SPLASH_SCREEN.md  PERFORMANCE_LOGGING.md  README.md  REFACTORING_GUIDE.md  SETUP.md  WEBVIEW2_BLACK_SCREEN_FIX.md  WEBVIEW2_INITIALIZATION_DELAY.md  WEBVIEW2_OPTIMIZATION_STRATEGIES.md  build.bat  build.ps1  claude.md  poc_ffmpeg_pipe.rs
.cargo/: README.md  config.toml  config.toml.gnu
.claude/: settings.local.json
assets/icons/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: audio_monitor.rs  audio_utils.rs  chunk_processor.rs  cli.rs  config.rs  devices.rs  domain.rs  error.rs  ffmpeg_encoder.rs  ffmpeg_pipe_encoder.rs  lib.rs  logging.rs  output.rs  recorder.rs  streaming_encoder.rs  wasapi_loopback.rs  wasapi_microphone.rs  wav_encoder.rs
crates/core/src/commands/: cancel.rs  mod.rs  record.rs  recover.rs  status.rs  stop.rs
crates/core/src/status/: json_observer.rs  mod.rs  observer.rs
crates/core/src/transcription/: config.rs  mod.rs  transcribe.rs
crates/core/tests/: transcription_test.rs
crates/tauri-app/: Cargo.toml  run-ui-dev.bat  tauri.conf.json
crates/tauri-app/.claude/: settings.local.json
crates/tauri-app/icons/: README.md
crates/tauri-app/src/: dto.rs  main.rs  splash_screen.rs  state.rs
crates/tauri-app/ui/: index.html  package.json  tailwind.config.js
crates/tauri-app/ui/src/: App.svelte  app.css  main.js
crates/tauri-app/ui/src/lib/: keyboard.js  stores.js
crates/tauri-app/ui/src/lib/components/: ActiveRecording.svelte  DeviceStatus.svelte  KeyboardShortcut.svelte  KeyboardShortcutsHelp.svelte  ProcessingStages.svelte  RecordingDetail.svelte  RecordingPanel.svelte  RecordingsList.svelte  Recovery.svelte  Settings.svelte  TranscriptViewer.svelte
docs/: GUI_DEVELOPMENT.md  GUI_PLAN.md  GUI_ROADMAP.md  GUI_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MINIMAL_GUI_POC.md  NEXT_STEPS.md  README.md  architecture.md  macos-migration-analysis.md  macos-system-audio-comparison.md  migration-guide.md  tauri-setup.md
docs/examples/: egui_minimal_example.rs
docs/reference-python-version/: devices.py  main.py  recorder.py
examples/: transcribe_audio.py
python-for-inspiration/: devices.py  main.py  recorder.py
scripts/: cleanup-webview2.ps1
src/: cli.rs  config.rs  devices.rs  domain.rs  error.rs  lib.rs  main.rs  recorder.rs  wasapi_loopback.rs  wasapi_microphone.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/commands/: mod.rs  record.rs  recover.rs  status.rs
src/gui/: app.rs  main.rs
src/gui/components/: header.rs  history_panel.rs  mod.rs  monitor_panel.rs  record_panel.rs  recovery_panel.rs  settings_panel.rs  sidebar.rs
src/gui/services/: mod.rs  recorder_service.rs
src/gui/state/: app_state.rs  mod.rs
src/status/: json_observer.rs  observer.rs
src/transcription/: mod.rs  transcribe.rs
themes/: catppuccin.json
ui/: index.html  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/lib/: stores.js
ui/src/lib/components/: ActiveRecording.svelte  DeviceStatus.svelte  RecordingPanel.svelte  RecordingsList.svelte  Recovery.svelte  Settings.svelte  TranscriptViewer.svelte
