[package]
name = "audio-recorder-manager"
version = "0.6.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line audio recorder manager"
license = "MIT"

# Build both library and CLI binary
[lib]
name = "audio_recorder_manager"
path = "src/lib.rs"

[[bin]]
name = "audio-recorder-manager"
path = "src/bin/cli.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
base64 = "0.22"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "implement"
] }
