[workspace]
members = ["crates/core", "crates/cli", "crates/tauri-app"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
thiserror = "1.0"

# Audio dependencies
cpal = "0.15"
hound = "3.5"

# HTTP and API
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
base64 = "0.22"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# System utilities
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
