[workspace]
members = ["crates/core", "crates/cli", "crates/tauri-app"]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"
tracing-log = "0.2"
anyhow = "1.0"
thiserror = "1.0"

# Audio dependencies
cpal = "0.15"
hound = "3.5"

# HTTP and API
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# System utilities
dirs = "5.0"

[profile.dev]
opt-level = 1          # Basic optimizations for faster runtime
incremental = true     # Enable incremental compilation

[profile.dev.package."*"]
opt-level = 3          # Fully optimize dependencies, keep your code fast to compile

[profile.dev.build-override]
opt-level = 3          # Optimize build scripts

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-dev]
inherits = "release"
lto = false           # Disable LTO for faster builds
codegen-units = 16    # More parallel compilation
strip = false
