[package]
name = "audio-recorder-manager-tauri"
version = "0.4.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Tauri UI for Audio Recorder Manager"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "dialog-open", "dialog-save", "fs-read-dir", "fs-read-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full", "rt-multi-thread"] }
audio-recorder-manager = { path = ".." }
notify = "7.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Threading",
] }
