[package]
name = "audio-recorder-manager-cli"
version = "0.7.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Command-line interface for audio recording manager"
license = "MIT"

[[bin]]
name = "audio-recorder-manager"
path = "src/main.rs"

[dependencies]
audio-recorder-manager-core = { path = "../core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
dirs = { workspace = true }
