[package]
name = "audio-recorder-manager-core"
version = "0.7.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core library for audio recording and transcription"
license = "MIT"

[lib]
name = "audio_recorder_manager_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Threading",
    "implement"
] }
