[package]
name = "audio-recorder-manager-tauri"
version = "0.7.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Tauri UI for Audio Recorder Manager"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = { workspace = true }
tauri = { version = "2.1", features = ["protocol-asset", "tray-icon", "wry"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-shell = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
audio-recorder-manager-core = { path = "../core" }
notify = "7.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
] }
